<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_control</name>
  <version>0.0.1</version>
  <description>ROS2 dynamixel_control using ROBOTIS DYNAMIXEL SDK</description>
  <license>Apache 2.0</license>
  <maintainer email="swwon20@gmail.com">SeongWon Won</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
  <author email="swwon20@gmail.com">SeongWon Won</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend>
  <depend>std_msgs</depend>
  

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




